Including HighlightJS as JS asset

--- a/eured/conf/assets.conf
+++ b/eured/conf/assets.conf
@@ -10,6 +10,10 @@ themePackages = {
 		fonts = css/fonts.css,
 		fontAwesome = css/Font-Awesome/css/font-awesome.css,
 		themecss = css/theme.css:200
+	},
+	highlightjs = {
+	    js = highlight.pack.js:200,
+	    css= styles/default.css:100
 	}
 	# -----------------------
 }
@@ -22,5 +26,8 @@ themeLoadSets = {
 	#
 	_default = [
 		pawtucket/css, pawtucket/fonts, pawtucket/fontAwesome, pawtucket/themecss
+	],
+	highlightjs = [
+	    highlightjs/js, highlightjs/css
 	]
 }
